Added backgroung color in .word

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                     <h5><strong>Created  by:</strong></h3>
                                      <h5><em>Joan Korir</em></h5>
                             <div class="panel_">
-                                      <h4>GitHub Username/URL.</h4>
+                                      <h4>GitHub URL.</h4>
                                       <a href ="https://github.com/joankorir/ping-pong.git">https://github.com/joankorir/ping-pong.git </a>
                                     <h4>Level 2 Test for.</h4>
                                 </div>
