--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                                 <ol>
                                <li>Numbers divisible by 3 become "ping"</li>
                                <li>Numbers divisible by 5 become "pong"</li>
-                               <li>Numbers divisible by 3 and 5 become "ping-pong"</li>
+                               <li>Numbers divisible by 3 and 5 become "pingpong"</li>
                             </ol>
 
                           <form id ="divisibleNumber">
                               <label for="no"><strong>Enter your number here:</strong></label>
-                               <input type="text" name="Enter your number here" value="" id="no"/>
+                               <input type="text" name="Enter your number here" value="" id="no"</input>
                                          <button type="submit" name="button"> PingPong!</button>
                                 <ul id ="result">
                               </ul>
